<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmdescarte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".DescarteReutilizacao">

    <View
        android:id="@+id/view7"
        android:layout_width="364dp"
        android:layout_height="773dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imgCircle7"
        android:layout_width="247dp"
        android:layout_height="259dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="672dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_circle_24"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="729dp"
        android:contentDescription="@string/content_description"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_descarte"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="651dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/txtDescarte1"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/info_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtDescarte2"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/info_desc2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtDescarte3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/info_desc4"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtDescarte4"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/info_desc3"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>