<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmponto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".PontoReciclagemActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="364dp"
        android:layout_height="773dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imgCircle2"
        android:layout_width="247dp"
        android:layout_height="259dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="672dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_circle_24"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imgLogoMenu2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="761dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_recycling_24"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPontoMensagem"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:text="@string/ponto_mensagem"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtPontoMensagem2"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="@string/mensagem_aviso"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/mapa"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btnloc"
            android:layout_width="177dp"
            android:layout_height="85dp"
            android:backgroundTint="@color/green"
            android:onClick="pegarLocalização"
            android:text="@string/app_ir7"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:translationX="80dp"
            tools:ignore="UsingOnClickInXml,TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>