<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmComoImpac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:labelFor="@id/frmmenu"
    tools:context="@string/app_comoimpac">

    <View
        android:id="@+id/view5"
        android:layout_width="364dp"
        android:layout_height="822dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgCircle4"
        android:layout_width="247dp"
        android:layout_height="259dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_circle_24" />

    <TextView
        android:id="@+id/txtImpactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="783dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_comoimpac"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtImpacto1"
        android:layout_width="347dp"
        android:layout_height="232dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="488dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/info_comoImpac"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="352dp"
        android:layout_height="162dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/info_comoImpac2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtImpacto3"
        android:layout_width="351dp"
        android:layout_height="285dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/info_comoImpac3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>