<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmoque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".tela_oque">

    <View
        android:id="@+id/view4"
        android:layout_width="364dp"
        android:layout_height="822dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCircle3"
        android:layout_width="247dp"
        android:layout_height="259dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_circle_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="787dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_oquee"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInfoOque"
        android:layout_width="363dp"
        android:layout_height="144dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="568dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/info_oque1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="324dp"
        android:layout_height="232dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="283dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="336dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lixo_eletronico1" />

    <TextView
        android:id="@+id/txtInfoOque2"
        android:layout_width="340dp"
        android:layout_height="153dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="529dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/info_oque2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>